Resolves: tdf#93080 short day name and month name may interfere

Change-Id: I088633e4cff278e1add8eeea8828f9ba9c9fb140